name:                servant-tiny
version:             0
synopsis:            Tiny Servant
description:
  A bare bones version of @servant@ (and @servant-server@)
  presented in https://www.well-typed.com/blog/2015/11/implementing-a-minimal-version-of-haskell-servant/
homepage:            https://github.com/haskell-servant
license:             BSD3
license-file:        LICENSE
author:              Andres Löh, Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           Andres Löh, Oleg Grenrus
category:            Web, Servant
build-type:          Simple
cabal-version:       >=2.0

library
  exposed-modules:     TinyServant
  other-extensions:    DataKinds, PolyKinds, TypeOperators, TypeFamilies, FlexibleInstances, ScopedTypeVariables, InstanceSigs
  build-depends:       base ^>=4.10, time ^>=1.8
  default-language:    Haskell2010
